--- a/AdminReseau.html
+++ b/AdminReseau.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title></title>
 </head>
-<body>
+<body background="imageDegrade.jpg">
 	<center>
 		<h1>Administrateur Réseau</h1>
 		<p>
