--- a/PagePrincipaleMetiers.html
+++ b/PagePrincipaleMetiers.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title></title>
 </head>
-<body>
+<body background="imageDegrade.jpg">
 	<ul> 
 <li>  <a href="devWeb.html"> Developpeur Web </a> </li> 
 </ul>
