--- a/PagePrincipaleTPcss_et_TPframe.html
+++ b/PagePrincipaleTPcss_et_TPframe.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title></title>
 </head>
-<body>
+<body background="imageDegrade.jpg">
 
 	<ul> 
 <li> <a href=" https://ilyes943.github.io/tpFrame/">Tp Frame </a>  </li>
