--- a/TPcss.html
+++ b/TPcss.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title></title>
 </head>
-<body>
+<body background="imageDegrade.jpg">
 	<center>
 
 	<a href="indextp1.html"> tp1 </a>
