--- a/index.html
+++ b/index.html
@@ -2,24 +2,41 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<title>Menu responsive déroulant HTML / CSS</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style1.css">
-	<title>Site ilyes</title>
-</head> <FONT color=" white"> 
-<body background="gif1.gif"> 
-
-		
-
-
-<center>
-	
-<form>
-			<button class="button1 button15">  <a href="PagePrincipaleMetiers.html">  Metiers de l'informatique        </a> </button> 
-</form>
-			<button class="button2 button25">  <a href="https://ilyes943.github.io/forms/"> Formulaire Inscription     </a> </button>
-			<button class="button3 button35">  <a href="PagePrincipaleTPcss_et_TPframe.html">        Tp css // Tp frame</a> </button>
-	</center>
-
-
-
-</body>
+</head> 
+<body background="gif1.gif">
+	<nav>
+		 <label for="menu-mobile" class="menu-mobile"> Menu </label>
+		 <input type="checkbox" id="menu-mobile" role="button">
+		 <ul>
+		 	<li class="menu-html"> <a href="#"> Metiers de l'informatique </a>
+		 		<ul class="submenu">
+		 			<li><a href="#"> Developpeur web </a></li>
+		 			<li><a href="#"> Developpeur application </a></li>
+		 			<li><a href="#"> Administrateur Réseau </a></li>
+		 			<li><a href="#"> Integrateur </a></li>
+		 		</ul>
+		 	</li>
+		 	<li class="menu-css"><a href="#">Formulaire inscription</a>
+		 		<ul class="submenu">
+		 			<li><a href="#"> Formulaire inscription ( vert ) </a></li>
+		 			
+		 		</ul>
+		 	</li>
+		 	<li class="menu-js"><a href="#">Tp css // Tp Frame </a>
+		 		<ul class="submenu">
+		 			<li><a href="#"> Tp1 </a></li>
+		 			<li><a href="#"> Tp2 </a></li>
+		 			<li><a href="#"> Tp3 </a></li>
+		 			<li><a href="#"> Tp4 </a></li>
+		 			<li><a href="#"> Tp5 </a></li>
+		 			<li><a href="#"> Tp6 </a></li>
+		 		</ul>
+		 	</li>
+		 	<li class="menu-contact"><a href="#">Contact</a></li>
+		</ul>
+	  </nav>
+   </body>
 </html>
