--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		 			<li><a href="#"> Developpeur web </a></li>
 		 			<li><a href="#"> Developpeur application </a></li>
 		 			<li><a href="AdminReseau.html"> Administrateur Réseau </a></li>
-		 			<li><a href="#"> Integrateur </a></li>
+		 			<li><a href="Integrateur.html"> Integrateur </a></li>
 		 		</ul>
 		 	</li>
 		 	<li class="menu-css"><a href="#">Formulaire inscription</a>
