--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		 <ul>
 		 	<li class="menu-html"> <a href="#"> Metiers de l'informatique </a>
 		 		<ul class="submenu">
-		 			<li><a href="#"> Developpeur web </a></li>
+		 			<li><a href="devWeb.html"> Developpeur web </a></li>
 		 			<li><a href="devApp.html"> Developpeur application </a></li>
 		 			<li><a href="AdminReseau.html"> Administrateur Réseau </a></li>
 		 			<li><a href="Integrateur.html"> Integrateur </a></li>
