--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		 	</li>
 		 	<li class="menu-js"><a href="#">Tp css // Tp Frame </a>
 		 		<ul class="submenu">
-		 			<li><a href="#"> Tp1 </a></li>
+		 			<li><a href="indextp1.html"> Tp1 </a></li>
 		 			<li><a href="#"> Tp2 </a></li>
 		 			<li><a href="#"> Tp3 </a></li>
 		 			<li><a href="#"> Tp4 </a></li>
