--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		 	<li class="menu-js"><a href="#">Tp css // Tp Frame </a>
 		 		<ul class="submenu">
 		 			<li><a href="indextp1.html"> Tp1 </a></li>
-		 			<li><a href="#"> Tp2 </a></li>
-		 			<li><a href="#"> Tp3 </a></li>
+		 			<li><a href="indextp2.html"> Tp2 </a></li>
+		 			<li><a href="indextp3.html"> Tp3 </a></li>
 		 			<li><a href="#"> Tp4 </a></li>
 		 			<li><a href="#"> Tp5 </a></li>
 		 			<li><a href="#"> Tp6 </a></li>
