--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		 			<li><a href="indextp3.html"> Tp3 </a></li>
 		 			<li><a href="https://ilyes943.github.io/FranceUsa/"> Tp4 </a></li>
 		 			<li><a href="https://ilyes943.github.io/siteCV/"> Tp5 </a></li>
-		 			<li><a href="#"> Tp6 </a></li>
+		 			<li><a href=" https://ilyes943.github.io/menu_tp6/"> Tp6 </a></li>
 		 		</ul>
 		 	</li>
 		 	<li class="menu-contact"><a href="#">Contact</a></li>
