--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		 	<li class="menu-js"><a href="#">Tp css // Tp Frame </a>
 		 		<ul class="submenu">
 		 			<li><a href="https://ilyes943.github.io/TPcss/indextp1.html"> Tp1 </a></li>
-		 			<li><a href="indextp2.html"> Tp2 </a></li>
+		 			<li><a href="https://ilyes943.github.io/TPcss/indextp2.html"> Tp2 </a></li>
 		 			<li><a href="indextp3.html"> Tp3 </a></li>
 		 			<li><a href="https://ilyes943.github.io/FranceUsa/"> Tp4 </a></li>
 		 			<li><a href="https://ilyes943.github.io/siteCV/"> Tp5 </a></li>
