--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		 		<ul class="submenu">
 		 			<li><a href="https://ilyes943.github.io/TPcss/indextp1.html"> Tp1 </a></li>
 		 			<li><a href="https://ilyes943.github.io/TPcss/indextp2.html"> Tp2 </a></li>
-		 			<li><a href="indextp3.html"> Tp3 </a></li>
+		 			<li><a href="https://ilyes943.github.io/TPcss/indextp3.html"> Tp3 </a></li>
 		 			<li><a href="https://ilyes943.github.io/FranceUsa/"> Tp4 </a></li>
 		 			<li><a href="https://ilyes943.github.io/siteCV/"> Tp5 </a></li>
 		 			<li><a href=" https://ilyes943.github.io/menu_tp6/"> Tp6 </a></li>
