--- a/tp2_js.html
+++ b/tp2_js.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <link rel="stylesheet" type="text/css" href="style1.css">
+<head> <link rel="stylesheet" type="text/css" href="style1_js.css">
 	<title></title>
 </head>
 <body>
