--- a/tp3_js.html
+++ b/tp3_js.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <link rel="stylesheet" type="text/css" href="style2.css">
+<head> <link rel="stylesheet" type="text/css" href="style2_js.css">
 	<title></title>
 </head>
 <body>
