--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 		 			<li><a href=" https://ilyes943.github.io/menu_tp6/"> Tp6 </a></li>
 		 		</ul>
 		 	</li>
-		 	<li class="menu-contact"><a href="#">Contact</a>
+		 	<li class="menu-contact"><a href="#">Tp JavaScript</a>
 				
 				<ul class="submenu">
-		 			<li><a href="https://ilyes943.github.io/TPcss/indextp1.html"> Tp1 </a></li>
-		 			<li><a href="https://ilyes943.github.io/TPcss/indextp2.html"> Tp2 </a></li>
-		 			<li><a href="https://ilyes943.github.io/TPcss/indextp3.html"> Tp3 </a></li>
-		 			<li><a href="https://ilyes943.github.io/FranceUsa/"> Tp4 </a></li>
-		 			<li><a href="https://ilyes943.github.io/siteCV/"> Tp5 </a></li>
-		 			<li><a href=" https://ilyes943.github.io/menu_tp6/"> Tp6 </a></li>
+		 			<li><a href="tp1_js.html"> Tp1 </a></li>
+		 			<li><a href="tp2_js.html"> Tp2 </a></li>
+		 			<li><a href="tp3_js.html"> Tp3 </a></li>
+		 			<li><a href="tp4_js.html"> Tp4 </a></li>
+		 			<li><a href="tp5_js.html"> Tp5 </a></li>
+		 			<li><a href="tp6_js.html"> Tp6 </a></li>
 		</ul>
 	  </nav>
    </body>
