--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 				
 				<ul class="submenu">
 		 			<li><a href="base_donnees.docxl"> Base de données PHP </a></li>
+					<li><a href="qcm.html"> Questionnaire a choix multiples </a></li>
 		 			
 		</ul>
 	  </nav>
