--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 				<ul class="submenu">
 		 			<li><a href="base_donnees.docxl"> Base de données PHP </a></li>
 					<li><a href="qcm.html"> Questionnaire a choix multiples </a></li>
+					<li><a href="requetesSQL"> Requetes SQL </a></li>
 		 			
 		</ul>
 	  </nav>
