--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<li class="menu-contact"><a href="#">Divers</a>
 				
 				<ul class="submenu">
-		 			<li><a href="base_donnees.docxl"> Base de données PHP </a></li>
+		 			<li><a href="base_donnees.docx"> Base de données PHP </a></li>
 					<li><a href="qcm.html"> Questionnaire a choix multiples </a></li>
 					<li><a href="requetesSQL.pdf"> Requetes SQL </a></li>
 		 			
