--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 					<li><a href="requetesSQL.pdf"> Requetes SQL </a></li>
 		 			
 		</ul>
+					<li class="menu-contact"><a href="https://ilyes943.github.io/tp_facture/">Powerpoint Presentation</a>
+				
+				<ul class="submenu">
+					</ul>
 	  </nav>
    </body>
 </html>
