--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<li><a href="requetesSQL.pdf"> Requetes SQL </a></li>
 		 			
 		</ul>
-					<li class="menu-contact"><a href="Présentation.pdf">Powerpoint Presentation</a>
+					<li class="menu-contact"><a href="https://1drv.ms/p/s!AlNhnPCPoyYTgSk8GzV9_vTaAmvT?e=vLmtwV">Powerpoint Presentation</a>
 				
 				<ul class="submenu">
 					</ul>
